fixed heading spacing from QA testing

--- a/webapp/src/app/resource/resource.component.scss
+++ b/webapp/src/app/resource/resource.component.scss
@@ -44,7 +44,7 @@
     max-width: calc(var(--measure) + 8rem);
     padding: 0 $spacer-lg;
     justify-content: center;
-    // justify-self: center;
+    justify-self: center;
     width: -webkit-fill-available;
 
     .top-header {
